# Math3D

./: CMakeLists.txt  Defs.h  math3d.h
math/: Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  util.h
rendering_utils/: Camera.cpp  Camera.h  Color.h  Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h
